# qipy

./: .gitignore  LICENSE  README.md  pyproject.toml
qipy/: __init__.py
