[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qipy"
version = "0.1.0"
authors = [
    {name = "Vladimir Dabić", email = "vddabic@gmail.com"}
]
description = "Quantum circuit simulator with sparse and dense implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
]
keywords = ["quantum", "quantum computing", "simulation", "quantum circuits", "quantum information"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vladimirdabic/qipy"
Repository = "https://github.com/vladimirdabic/qipy"